split the main readme into docs.